Redesign of West African states

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -270,7 +270,7 @@
  STATE_269:0 "British Somaliland"
  STATE_270:0 "Pitcairn Island"
  STATE_271:0 "Addis Abada"
- STATE_272:0 "Senegal"
+ STATE_272:0 "Dakar"
  STATE_273:0 "Fezzan"
  STATE_274:0 "Nicaraguan Canal"
  STATE_275:0 "Transvaal"
@@ -513,7 +513,7 @@
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
  STATE_514:0 "Algerian Desert"
- STATE_515:0 "Nigerien Desert"
+ STATE_515:0 "Aourou"
  STATE_516:0 "Northwest Siberia"
  STATE_517:0 "Nouvelle-Occitanie"
  STATE_518:0 "Van Diemensland"
@@ -550,11 +550,11 @@
  STATE_549:0 "Sudan"
  STATE_550:0 "Eritrea"
  STATE_551:0 "Khartoum"
- STATE_552:0 "South Darfur"
+ STATE_552:0 "Konaakiri"
  STATE_553:0 "Lebanon"
  STATE_554:0 "Damascus"
  STATE_555:0 "Chishima Islands"
- STATE_556:0 "Northern Mali"
+ STATE_556:0 "Kayes"
  STATE_557:0 "Midi Pyrenees"
  STATE_558:0 "Central Nigeria"
  STATE_559:0 "Portuguese Somaliland"
@@ -779,8 +779,8 @@
  STATE_778:0 "Los Altos"
  STATE_779:0 "Honduran Miskito"
  STATE_780:0 "Miskito Coast"
- STATE_781:0 "Niger"
- STATE_782:0 "Tombouctou"
+ STATE_781:0 "Niamey"
+ STATE_782:0 "Taoudenni"
  STATE_783:0 "Sidi Ifni"
  STATE_784:1 "Wilno"
  STATE_785:0 "Picardy"
@@ -802,11 +802,11 @@
  STATE_801:0 "Oglala"
  STATE_802:0 "Shoshone"
  STATE_803:0 "Baule"
- STATE_804:0 "Southern Mali"
- STATE_805:0 "Fulani"
- STATE_806:0 "Kanuri"
+ STATE_804:0 "Ouagadougou"
+ STATE_805:0 "Kouroussa"
+ STATE_806:0 "Agadez"
  STATE_807:0 "Reguibat"
- STATE_808:0 "Mauritania"
+ STATE_808:0 "Inchiri"
  STATE_809:0 "Franche-Comté"
  STATE_810:0 "Westsylvania"
  STATE_811:0 "Long Island"
@@ -859,7 +859,7 @@
  STATE_858:0 "Vrije Staat"
  STATE_859:0 "Swaziland"
  STATE_860:0 "Northern Nigeria"
- STATE_861:0 "Beninia"
+ STATE_861:0 "Azawad"
  STATE_862:0 "Biafra"
  STATE_863:0 "Oyo"
  STATE_864:0 "Garanganze"
@@ -923,3 +923,16 @@
  STATE_921:0 "Orol"
  STATE_922:0 "El Djouf"
  STATE_923:0 "Friaul"
+ STATE_924:0 "Nara"
+ STATE_925:0 "Bamako"
+ STATE_926:0 "Selibaby"
+ STATE_927:0 "Labe"
+ STATE_928:0 "Ziguinchar"
+ STATE_929:0 "Tagant"
+ STATE_930:0 "Adrar"
+ STATE_931:0 "Tiris Zemmour"
+ STATE_932:0 "Bobo-Dioulasso"
+ STATE_933:0 "Tera"
+ STATE_934:0 "Maradi"
+ STATE_935:0 "Kaouar"
+ STATE_936:0 "Gambia"
