--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -710,3 +710,4 @@
  VICTORY_POINTS_13218:0 "Vatican City"
  VICTORY_POINTS_13217:0 "Monaco"
  VICTORY_POINTS_13216:0 "Andorra-la-Vella"
+ VICTORY_POINTS_4989:0 "Bathurst"
