Province Changes for West Africa and other areas, minor loc and state changes too

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -512,7 +512,7 @@
  STATE_511:0 "Mendoza"
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
- STATE_514:0 "Algerian Desert"
+ STATE_514:0 "Aïn-Sefra-Ouargla"
  STATE_515:0 "Aourou"
  STATE_516:0 "Northwest Siberia"
  STATE_517:0 "Nouvelle-Occitanie"
@@ -784,7 +784,7 @@
  STATE_783:0 "Sidi Ifni"
  STATE_784:1 "Wilno"
  STATE_785:0 "Picardy"
- STATE_786:0 "Mauritanian Desert"
+ STATE_786:0 "Oualata"
  STATE_787:0 "Northern Kashmir"
  STATE_788:0 "Wallonie Du Sud"
  STATE_789:0 "Australien Desert"
@@ -879,7 +879,7 @@
  STATE_GAMB:0 "Gambela"
  STATE_878:0 "Oromia"
  STATE_879:0 "Gazaland"
- STATE_880:0 "Egyptian Desert"
+ STATE_880:0 "Al-Kharijah"
  STATE_881:0 "Rockafeller"
  STATE_882:0 "Far Northeast Outback"
  STATE_883:0 "Diamantina River Basin"
@@ -923,7 +923,7 @@
  STATE_921:0 "Orol"
  STATE_922:0 "El Djouf"
  STATE_923:0 "Friaul"
- STATE_924:0 "Nara"
+ STATE_924:0 "Néma"
  STATE_925:0 "Bamako"
  STATE_926:0 "Selibaby"
  STATE_927:0 "Labe"
