FRA bug fixing and stuff

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -3,8 +3,9 @@
   ##########################
   # PACTE DE UNITY
   ##########################
-  PB_FRA_Pacte_De_Unity:0 "Pacte De Unity"
-  PB_FRA_Pacte_De_Unity_desc:0 "\n\n\n\n\n\nIf France is to guarantee the longevity of her Empire then she must prevent the rise of global rival powers at all costs. Whilst her arch rival, the perfidious Albion, may be defeated there are still those that wish to see Paris rot. The Pacte De Unity will be an international spanning alliance much like that of the Pacte Revanchiste but with the added benefit of representing the interests of France and her allies equally, and a direct competitor to the League of Nations.\n\nThere are currently §Y[?FRA_PDU_Member_States]§! Member States in the Pacte De Unity. Each member state has §G1§! vote and the Founding member state, which will always be France, is allowed §G5§! votes. Member states that happen to be a puppet of the Founding member state will typically vote in favour of them.\n\n§Y[?FRA_PDU_Member_States_Voted_Yes]§! out of the §Y[?FRA_PDU_Member_States]§! Member States are in support of this vote.\n"
+  FRA_FACTION_UNITY:0 "Pacte d'Unité"
+  PB_FRA_Pacte_De_Unity:0 "Pacte d'Unité"
+  PB_FRA_Pacte_De_Unity_desc:0 "\n\n\n\n\n\nIf France is to guarantee the longevity of her Empire then she must prevent the rise of global rival powers at all costs. Whilst her arch rival, the perfidious Albion, may be defeated there are still those that wish to see Paris rot. The Pacte d'Unité will be an international spanning alliance much like that of the Pacte Revanchiste but with the added benefit of representing the interests of France and her allies equally, and a direct competitor to the League of Nations.\n\nThere are currently §Y[?FRA_PDU_Member_States]§! Member States in the Pacte d'Unité. Each member state has §G1§! vote and the Founding member state, which will always be France, is allowed §G5§! votes. Member states that happen to be a puppet of the Founding member state will typically vote in favour of them.\n\n§Y[?FRA_PDU_Member_States_Voted_Yes]§! out of the §Y[?FRA_PDU_Member_States]§! Member States are in support of this vote.\n"
   PB_FRA_Test:0 "Test"
 
   ##########################
@@ -87,6 +88,7 @@
   PB_FRA_Attack_Germany_tt:0 "A series of events will fire, eventually leading to war with the §P[GER.GetName]§!"
   PB_FRA_Dutch_Crisis_tt:0 "Germany is likely to defend the §P[HOL.GetName]§! against any demands we make, this may lead to war"
   PB_FRA_Spacing_tt:0 "        \n" # ---- Use this to space focus effects out
+  PB_FRA_A_New_World_Order_tt:0 "§gAny ideas or bonuses you may have gotten from the Endsieg tree will be removed§!"
 
   ##########################
   # Factionalism/Nationalistic Fervour
@@ -97,12 +99,12 @@
   FRA_Low_Factionalism_Idea:0 "Low Factionalism"
   FRA_Med_Factionalism_Idea:0 "Medium Factionalism" 
   FRA_High_Factionalism_Idea:0 "High Factionalism"
-  FRA_Factionalism_0.02_decrease:0 "Factionalism will decrease by §G-2%§!"
-  FRA_Factionalism_0.04_decrease:0 "Factionalism will decrease by §G-4%§!"
-  FRA_Factionalism_0.06_decrease:0 "Factionalism will decrease by §G-6%§!"
-  FRA_Factionalism_0.02_increase:0 "Factionalism will increase by §R+2%§!"
-  FRA_Factionalism_0.04_increase:0 "Factionalism will increase by §R+4%§!"
-  FRA_Factionalism_0.06_increase:0 "Factionalism will increase by §R+6%§!"
+  FRA_Factionalism_0.02_decrease:0 "Factionalism: §G-2%§!."
+  FRA_Factionalism_0.04_decrease:0 "Factionalism: §G-4%§!."
+  FRA_Factionalism_0.06_decrease:0 "Factionalism: §G-6%§!."
+  FRA_Factionalism_0.02_increase:0 "Factionalism: §R+2%§!."
+  FRA_Factionalism_0.04_increase:0 "Factionalism: §R+4%§!."
+  FRA_Factionalism_0.06_increase:0 "Factionalism: §R+6%§!."
   PB_Lower_Factionalism:0 "Lower Factionalism"
   PB_Increase_Nationalistic_Fervour:0 "Increase Nationalistic Fervour"
   FRA_High_Nationalistic_Fervour:0 "High"
@@ -113,12 +115,12 @@
   FRA_Low_Nationalistic_Fervour_Idea:0 "Low Nationalistic Fervour" 
   FRA_Med_Nationalistic_Fervour_Idea:0 "Medium Nationalistic Fervour"
   FRA_High_Nationalistic_Fervour_Idea:0 "High Nationalistic Fervour"
-  FRA_Nationalistic_Fervour_0.02_decrease:0 "Nationalistic Fervour will decrease by §R-2%§!"
-  FRA_Nationalistic_Fervour_0.04_decrease:0 "Nationalistic Fervour will decrease by §R-4%§!"
-  FRA_Nationalistic_Fervour_0.06_decrease:0 "Nationalistic Fervour will decrease by §R-6%§!"
-  FRA_Nationalistic_Fervour_0.02_increase:0 "Nationalistic Fervour will increase by §G+2%§!"
-  FRA_Nationalistic_Fervour_0.04_increase:0 "Nationalistic Fervour will increase by §G+4%§!"
-  FRA_Nationalistic_Fervour_0.06_increase:0 "Nationalistic Fervour will increase by §G+6%§!"
+  FRA_Nationalistic_Fervour_0.02_decrease:0 "Nationalistic Fervour: §R-2%§!."
+  FRA_Nationalistic_Fervour_0.04_decrease:0 "Nationalistic Fervour: §R-4%§!."
+  FRA_Nationalistic_Fervour_0.06_decrease:0 "Nationalistic Fervour: §R-6%§!."
+  FRA_Nationalistic_Fervour_0.02_increase:0 "Nationalistic Fervour: §G+2%§!."
+  FRA_Nationalistic_Fervour_0.04_increase:0 "Nationalistic Fervour: §G+4%§!."
+  FRA_Nationalistic_Fervour_0.06_increase:0 "Nationalistic Fervour: §G+6%§!."
 
   ##########################
   # TRAITS
@@ -339,7 +341,6 @@
   French.28.t:0 "Germany protects Wallonia!"
   French.28.d:0 "Our plans for a swift victory against Wallonia have been suddenly dashed by honoring of the Walloon-German alliance on the part of the German Empire.  The German ambassador has already informed us that unless we back down and formally make peace with the Walloons, then Germany will have no choice but to declare war against us.  Our soldiers and generals alike would relish the opportunity to avenge the Treaty of Tours once and for all, but if we back down, we could take the time to prepare and mobilize further and make sure the Germans will be humiliated in due time.  What shall we do?"
   French.28.a:0 "We shall start the Great Struggle now, then."
-  French.28.b:0 "We are not ready for a fight just yet."
 
   French.29.t:0 "France declares their claims on the Dutch"
   French.29.d:0 "Recent reports from our infiltrated assets within the French government seem to point toward ambitions of claiming the entirety of Dietland.  This has been further substantiated by Dutch reports of increased mobilization of French soldiers at their borders.  Though Dietland contains many natural defenses, their armed forces are small and could not hope to survive a sustained conflict with the rebuilt French Army.  Though we may shudder at the thought, with the French already having taken Wallonia, the seizure of Dietland would open up a dangerous flank on our borders and would be extremely detrimental in any future conflicts with the French.  Certain elements in our high command believe that we must answer this blatant act of aggression with war, but our diplomats believe that we could open a compromise, perhaps offering them partial concessions in exchange for dropping any further claims on the region.  Of course, we could just abandon Dietland entirely."
@@ -357,7 +358,7 @@
   French.31.a:0 "Onwards to Amsterdam!"
 
   French.32.t:0 "Germany defends the Dutch"
-  French.32.d:0 ""
+  French.32.d:0 "A strongly worded telegram from Frankfurt to our foreign office today has not only demanded that we immediately cease hostilities with Dietlandand remove our troops from their territory, but that the army of the United Kingdoms of Germany is on full alert and prepared to defend Dutch independence by force if necessary. Previous ultimatums from the Dutch have shown themselves to be bluffs, and their leadership quickly backed down from their insolence and allowed us to solve our territorial issues through diplomacy.\n\nHowever, this time, the German foreign office has informed us that they are no longer open to compromise. Either we end our conquest of Dutchland, or in 24 hours, the Germans will declare war if they have not received a response."
   French.32.a:0 "We will take them regardless!"
   French.32.b:0 "We shall stand down, for now."
 
@@ -366,7 +367,7 @@
   French.33.a:0 "Hey, shouldn't they be asking us?"
 
   French.34.t:0 "The End of the Dutch Crisis"
-  French.34.d:0 ""
+  French.34.d:0 "The agreement of the German government to a diplomatic solution over the Dutch issue has pleased us greatly. Though we may not have all of the Dutch territories under our control, our army is already marching into Flanders, and border posts are being torn down as the Tricolor flies over Brussels, Ghent, and Antwerp. Certainly, the reunification of the Belgian lands under our righteous and just rule has been a great victory for the French people, and proven to the world that France will not accept status as a secondary power when our history is filled with glory and victory.\n\nOn the other hand, our original demands were the entirety of Dutchland. Though many might favor this diplomatic solution and advise us to consiolidate our hold on the valuable Flemish lands. However, elements of our military believe that if we were to renenge on the agreement and follow our annexation of Flanders with a full-blown invasion of Dutchland, the Germans would be unable to respond."
   French.34.a:0 "Only take over Flanders"
   French.34.b:0 "Exploit the Crisis, take the entire region!"
 
@@ -1665,15 +1666,15 @@
 
   FRA_available_tech_team:0 "Available §YTech Team§!:\n"
 
-  PB_FRA_unemployment_variable_minus0.05_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.05%§!"
-  PB_FRA_unemployment_variable_minus0.1_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.1%§!"
-  PB_FRA_unemployment_variable_minus0.25_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.25%§!"
-  PB_FRA_unemployment_variable_minus0.5_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.5%§!"
-  PB_FRA_unemployment_variable_minus1_tt:0 "Our Unemployment will §Gdecrease§! by §Y1%§!"
-  PB_FRA_unemployment_variable_plus0.1_tt:0 "Our Unemployment will §Rincrease§! by §Y0.1%§!"
-  PB_FRA_unemployment_variable_plus0.25_tt:0 "Our Unemployment will §Rincrease§! by §Y0.25%§!"
-  PB_FRA_unemployment_variable_plus0.5_tt:0 "Our Unemployment will §Rincrease§! by §Y0.5%§!"
-  PB_FRA_unemployment_variable_plus1_tt:0 "Our Unemployment will §Rincrease§! by §Y1%§!"
+  PB_FRA_unemployment_variable_minus0.05_tt:0 "Unemployment: §G-0.05%§!."
+  PB_FRA_unemployment_variable_minus0.1_tt:0 "Unemployment: §G-0.1%§!."
+  PB_FRA_unemployment_variable_minus0.25_tt:0 "Unemployment: §G-0.25%§!."
+  PB_FRA_unemployment_variable_minus0.5_tt:0 "Unemployment: §G-0.5%§!."
+  PB_FRA_unemployment_variable_minus1_tt:0 "Unemployment: §G-1%§!."
+  PB_FRA_unemployment_variable_plus0.1_tt:0 "Unemployment: §R+0.1%§!."
+  PB_FRA_unemployment_variable_plus0.25_tt:0 "Unemployment: §R+0.25%§!."
+  PB_FRA_unemployment_variable_plus0.5_tt:0 "Unemployment: §R+0.5%§!."
+  PB_FRA_unemployment_variable_plus1_tt:0 "Unemployment: §R+1%§!."
 
   FRA_Unemployment_Variable_Less_Than_One:0 "Our Unemployment is less than §Y1%§!"
   FRA_unemployment_not_active:0 "Another Unemployment Decision is §RNOT§! being taken"
