More Italian Work

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -46,10 +46,16 @@ IST_ds_party:0 "ANI (C)"
 IST_rc_party_long:0 "Associazione Nazionalista Italiana (I)"
 IST_rc_party:0 "ANI (I)"
 
+IAR_jc_party:0 "PSRI"
+IAR_jc_party_long:0 "Partito dei Azione"
+
   ##########################
   # EVENTS
   ##########################
-
+  IST.1.t:0 "The Anarchists Rise Up!"
+  IST.1.d:0 "Dammit Dale"
+  IST.1.a:0 "We're gonna kick your ass!"
+  IST.1.b:0 "Join the Communist Party!"
   ##########################
   # FOCUSSES
   ##########################
@@ -327,9 +333,12 @@ PB_IST_Jacobin_Insurgency_Mechanic_desc:0 "\n\n\n\n\n\nThe Civil War is Over, ye
 IST_jacobin_name:0 "§RThe Revolutionary Movement§!"
 IST_jacobin_power:0 "§YThe Power of the Revolutionary Movement is§! §R[?IST_Jacobin_Power]§!"
 IST_jacobin_support:0 "§YThe Support of the Revolutionary Movement is§! §R[?IST_Jacobin_Support]§!"
-PB_IST_Jacobin_Gains:0 "The Revolutionary Movement is gathering strength!"
+PB_IST_Jacobin_Gains:0 "The Movement Grows!"
+PB_IST_Jacobin_Rebellion:0 "The Rebellion is Ready!"
 IST_jacobin_rebels_tt:0 "The Rebels have been defeated!"
 IST_jacobin_rebels_2_tt:0 "The Rebels are gaining strength!"
+IST_jacobin_rebels_3_tt:0 "The Rebels are not yet ready to rise up."
+IST_jacobin_rebels_4_tt:0 "The Rebels are ready to rise up!"
 ITA_kings_hands_tt:0 "The Hands are under control."
 ITA_mafia_changes_tt:0 "La Cosa Nostra grows in power, and their support for the King lessens"
 ITA_pope_changes_tt:0 "The Vatican's Power grows, yet their love for the king decreases"
