--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -128,15 +128,16 @@
 
  JC_VARIANT_01:0 "Jacobinism"
  JC_VARIANT_01_desc:0 "Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad.\n\nJacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
+
+ JC_VARIANT_02:0 "Anarchism"
+ JC_VARIANT_02_desc:0 "Whoops my anarchy symbol."
+
  JC_VARIANT_03:0 "§YRevolutionary Imperialism§!"
  JC_VARIANT_03_desc:0 "§YRevolutionary Imperialism§! is a radical, militant offshoot of Jacobinism arguing for the continued spread of the people's revolution. Revoultionary Imperialists seek to expand into surrounding nations and beyond, creating sister republics dedicated to their liberators' revolutionary ideals. Even among other Jacobins, Revolutionary Imperialists are seen as dangerous radicals, not just for their militancy but their tendency to gain traction within revolutionary militaries."
 
  JC_VARIANT_04:0 "§YNational Jacobinism§!"
  JC_VARIANT_04_desc:0 "§YNational Jacobinism§! is the term given to the rightist branch of Jacobin thought. Originating out of Germany, National Jacobinism grew as a rejection of French Classical Jacobinism, which was a distinctly liberal ideology. National Jacobins, instead, appeal to the militaristic and more socially conservative members of society. While still arguing for revolutionary republicanism, National Jacobins are against social reformism and believe in the importance of maintaining societal norms. In this way, National Jacobins are socially reactionary but economically collectivist. In many ways, the militant conservative nature of National Jacobins is more comparable to Neo Imperialist thought than Classical or even Reformist Jacobinist thought."
  
- JC_VARIANT_03:0 "§YRevolutionary Imperialism§!"
- JC_VARIANT_03_desc:0 "WIP"
-
  JC_VARIANT_05:0 "§YClassical Jacobinism§!"
  JC_VARIANT_05_desc:0 "§YClassical Jacobinism§! is an offshoot of traditional Jacobin thought that rejects the vanguardism and political tutelage of more conventional Jacobinism. Classical Jacobinism advocates for the idea of \"Revolutionary Democracy\", under which the majority of power is decentralized among the population and executive power is kept controlled via checks and balances. Though denounced by conventional Jacobins for the rejection of the vanguard, Classical Jacobins remain a prominent offshoot of Revolutionary Republican thought."
 
