--- a/localisation/PB_Poland_l_english.yml
+++ b/localisation/PB_Poland_l_english.yml
@@ -21,12 +21,12 @@ PB_POL_puppet_kingdom_desc:0 ""
   # COUNTRY
   ##########################
 
-POL_ds:0 "Congress Poland"
-POL_cn:0 "Congress Poland"
-POL_rc:0 "Congress Poland"
-POL_ni:0 "Congress Poland"
-POL_lb:0 "Congress Poland"
-POL_an:0 "Congress Poland"
+POL_ds:0 "Kingdom of Poland"
+POL_cn:0 "Kingdom of Poland"
+POL_rc:0 "Kingdom of Poland"
+POL_ni:0 "Kingdom of Poland"
+POL_lb:0 "Kingdom of Poland"
+POL_an:0 "Kingdom of Poland"
 POL_ss:0 "Congress Poland"
 POL_jc:0 "Congress Poland"
 
