--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1936,3 +1936,30 @@
   FRA_Latin_Union_ds_ADJ:0 "Latin"
   FRA_Latin_Union_cn_ADJ:0 "Latin"
   FRA_Latin_Union_an_ADJ:0 "Latin"
+
+  IRE_FRA_puppet_ni:0 "Occupied Ireland"
+  IRE_FRA_puppet_ni_DEF:0 "Occupied Irelandn"
+  IRE_FRA_puppet_ds:0 "Occupied Ireland"
+  IRE_FRA_puppet_ds_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_rc:0 "Occupied Ireland"
+  IRE_FRA_puppet_rc_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_an:0 "Occupied Ireland"
+  IRE_FRA_puppet_an_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_cn:0 "Occupied Ireland"
+  IRE_FRA_puppet_cn_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_lb:0 "Occupied Ireland"
+  IRE_FRA_puppet_lb_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_ss:0 "Occupied Ireland"
+  IRE_FRA_puppet_ss_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_jc:0 "Occupied Ireland"
+  IRE_FRA_puppet_jc_DEF:0 "Occupied Ireland"
+  IRE_FRA_puppet_ni_ADJ:0 "Irish"
+  IRE_FRA_puppet_rc_ADJ:0 "Irish"
+  IRE_FRA_puppet_lb_ADJ:0 "Irish"
+  IRE_FRA_puppet_ss_ADJ:0 "Irish"
+  IRE_FRA_puppet_jc_ADJ:0 "Irish"
+  IRE_FRA_puppet_ds_ADJ:0 "Irish"
+  IRE_FRA_puppet_cn_ADJ:0 "Irish"
+  IRE_FRA_puppet_an_ADJ:0 "Irish"
+
+  
