The Party Never Stops

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -152,7 +152,7 @@ ITA_TUN_jc:0 "Tunisia"
 
 
 #######################
-# FOCUS
+# KOI FOCUS
 #######################
 PB_ITA_Ending_the_Horrors:0 "Ending the Horrific Civil War"
 PB_ITA_Ending_the_Horrors_desc:0 ""
@@ -275,6 +275,119 @@ PB_ITA_of_pistols_and_popes:0 "Of Pistols and Popes"
 PB_ITA_of_pistols_and_popes_desc:0 ""
 PB_ITA_his_holiness_responds:0 "His Holiness Takes Action!"
 PB_ITA_his_holiness_responds_desc:0 ""
+# SRI FOCUS
+PB_IST_against_mongrels:0 "Against the Mongrels"
+PB_IST_against_mongrels_desc:0 ""
+PB_IST_cry_for_unity:0 "The Cry for Unity"
+PB_IST_cry_for_unity_desc:0 ""
+PB_IST_cry_for_war:0 "The Cry for War"
+PB_IST_cry_for_war_desc:0 ""
+PB_IST_cry_for_tools:0 "The Cry for Tools"
+PB_IST_cry_for_tools_desc:0 ""
+PB_IST_through_fury:0 "Winning Through Fury"
+PB_IST_through_fury_desc:0 ""
+PB_IST_through_science:0 "Winning Through Science"
+PB_IST_through_science_desc:0 ""
+PB_IST_call_of_legion:0 "Call of Legion"
+PB_IST_call_of_legion_desc:0 ""
+PB_IST_call_of_purity:0 "Call of Purity"
+PB_IST_call_of_purity_desc:0 ""
+PB_IST_syndicialist_planning:0 "D'Annunzio's Syndicalist Planning"
+PB_IST_syndicialist_planning_desc:0 ""
+PB_IST_advanced_processes:0 "Fermi's Advanced Processes"
+PB_IST_advanced_processes_desc:0 ""
+PB_IST_fight_like_ancients:0 "Fight Like the Ancients"
+PB_IST_fight_like_ancients_desc:0 ""
+PB_IST_hardsuit_advancements:0 "Hardsuit Advancements"
+PB_IST_hardsuit_advancements_desc:0 ""
+PB_IST_guard_our_nation:0 "To Guard Our Nation"
+PB_IST_guard_our_nation_desc:0 ""
+PB_IST_purify_our_nation:0 "To Purify Our Nation"
+PB_IST_purify_our_nation_desc:0 ""
+PB_IST_weapons_mountain:0 "A Mountain of Weaponry"
+PB_IST_weapons_mountain_desc:0 ""
+PB_IST_weapons_future:0 "Weapons of the Future"
+PB_IST_weapons_future_desc:0 ""
+PB_IST_calling_the_sons:0 "Calling the Sons of Italia"
+PB_IST_calling_the_sons_desc:0 ""
+PB_IST_calling_the_soldiers:0 "Calling the Sons of Italia"
+PB_IST_calling_the_soldiers_desc:0 ""
+PB_IST_calling_the_workers:0 "Calling the Workers of Italia"
+PB_IST_calling_the_workers_desc:0 ""
+PB_IST_death_false_king:0 "Death to the False King!"
+PB_IST_death_false_king_desc:0 ""
+PB_IST_regaining_italy_strength:0 "Regaining Italy's Strength"
+PB_IST_regaining_italy_strength_desc:0 ""
+PB_IST_the_economic_ruins:0 "The Economic Ruins"
+PB_IST_the_economic_ruins_desc:0 ""
+PB_IST_monarchist_leaders:0 "Dealing With Monarchist Leaders"
+PB_IST_monarchist_leaders_desc:0 ""
+PB_IST_army_evolution:0 "Evolution Through Trial"
+PB_IST_army_evolution_desc:0 ""
+PB_IST_advanced_construction_project:0 "Fermi's Advanced Construction Project"
+PB_IST_advanced_construction_project_desc:0 ""
+PB_IST_road_scheme:0 "D'Annunzio's Grand Road Scheme"
+PB_IST_road_scheme_desc:0 ""
+PB_IST_countryside_initiative:0 "Evola's Countryside Initiative"
+PB_IST_countryside_initiative_desc:0 ""
+PB_IST_find_the_sympathetic:0 "Finding Sympathetic Leaders"
+PB_IST_find_the_sympathetic_desc:0 ""
+PB_IST_recruit_their_commanders:0 "Recruit Their Commanders"
+PB_IST_recruit_their_commanders_desc:0 ""
+PB_IST_kill_them_all:0 "Kill Them All"
+PB_IST_kill_them_all_desc:0 ""
+PB_IST_future_of_war:0 "The Future of War"
+PB_IST_future_of_war_desc:0 ""
+PB_IST_legion_of_today:0 "Legions of Today"
+PB_IST_legion_of_today_desc:0 ""
+PB_IST_wave_of_patriots:0 "A Wave of Patriots"
+PB_IST_wave_of_patriots_desc:0 ""
+PB_IST_something_wicked:0 "Something Wicked This Way Comes"
+PB_IST_something_wicked_desc:0 ""
+PB_IST_revolution_of_traitors:0 "A Revolution of Traitors"
+PB_IST_revolution_of_traitors_desc:0 ""
+PB_IST_science_leads_the_hunt:0 "Fermi's Science Leads the Hunt"
+PB_IST_science_leads_the_hunt_desc:0 ""
+PB_IST_follow_dannunzio_lead:0 "Follow D'Annunzio's Lead"
+PB_IST_follow_dannunzio_lead_desc:0 ""
+PB_IST_evola_will_end_them:0 "Evola Will End Them"
+PB_IST_evola_will_end_them_desc:0 ""
+PB_IST_tracking_devices:0 "Tracking Devices"
+PB_IST_tracking_devices_desc:0 ""
+PB_IST_brainwashing_techniques:0 "Brainwashing Techniques"
+PB_IST_brainwashing_techniques_desc:0 ""
+PB_IST_legionary_spies:0 "Legionary Spies"
+PB_IST_legionary_spies_desc:0 ""
+PB_IST_traitors_of_traitors:0 "The Traitors' Traitors"
+PB_IST_traitors_of_traitors_desc:0 ""
+PB_IST_organizing_lynch_parties:0 "Organizing Lynch Parties"
+PB_IST_organizing_lynch_parties_desc:0 ""
+PB_IST_raping_their_dreams:0 "Raping Their Dreams"
+PB_IST_raping_their_dreams_desc:0 ""
+PB_IST_enhanced_hounds:0 "Enhanced Hunting Hounds"
+PB_IST_enhanced_hounds_desc:0 ""
+PB_IST_making_lobotomites:0 "Making Lobotomites"
+PB_IST_making_lobotomites_desc:0 ""
+PB_IST_recon_patrols:0 "Recon Patrols"
+PB_IST_recon_patrols_desc:0 ""
+PB_IST_bribing_door_guards:0 "Bribing Hideout Guards"
+PB_IST_bribing_door_guards_desc:0 ""
+PB_IST_none_are_innocent:0 "None are Innocent"
+PB_IST_none_are_innocent_desc:0 ""
+PB_IST_we_are_their_nightmares:0 "We are Their Nightmares"
+PB_IST_we_are_their_nightmares_desc:0 ""
+PB_progress_conquers_all:0 "Progress Conquers All"
+PB_progress_conquers_all_desc:0 ""
+PB_IST_assaulting_revolutionary_hideouts:0 "Assaulting Centers of Revolutionary Activity"
+PB_IST_assaulting_revolutionary_hideouts_desc:0 ""
+PB_IST_grand_orgy_of_violence:0 "A Grand Orgy of Violence"
+PB_IST_grand_orgy_of_violence_desc:0 ""
+PB_IST_strangling_newborn_revolution:0 "Strangling the Revolution in Its Crib"
+PB_IST_strangling_newborn_revolution_desc:0 ""
+PB_IST_the_revolution_is_now:0 "THE REVOLUTION IS NOW"
+PB_IST_the_revolution_is_now_desc:0 ""
+#IAR FOCUS
+
 ###########################
 # MINISTERS
 ###########################
