--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -26,7 +26,7 @@
 
   PB_Charles_Muarras_Desc:0 "§YBorn:§! 20/4/1868\n\n§YCharles Maurras§! is considered by some as France's most loyal patriot, and by others as a crooked old fool that believes in bygone traditions. Whatever the case may be one thing for sure is Maurras and his cronies remain adamant on the return of the Bourbon dynasty, which has remained in exile in Corsica since the Great War. Before the Great War Maurras was a self-employed author mainly writing non-fiction books on political science, taking inspiration from various pre-20th century philosophies, namely Existentialism and Phenomenology.\n\nMaurras lived a rather poor life finding only minor success in a few written texts but by the end of the Great War this difficulty only became worse. Food stalls became a permanent fixture of Maurras' life until a small pro-monarchist printing agency hired him. From there Maurras rose through the ranks and established himself as a fairly notable writer, ultimately becoming head of the New Kings League newspaper company.\n\nBy 1927 the political landscape of France was by all definitions an utter shit show. Strikes and protests occurred almost daily and from this point on Maurras started to present himself as the man with all the solutions, gathering public support and finding a 'comfortable' position in the newly founded Front Populaire Français. Today Charles Maurras stands victorious in the triumvirate and though stability is finally restored, to some degree, reconstruction and preperation for Europe's 'darkest years' is required if France is to outlive the storm.\n\n§RAll heil Maurras!§!"
 
-  PB_Inessa_Armand_DESC:0 "§YBorn:§! 8/5/1874\n\n§YInessa Armand§! can only be described as both revolutionary and counter-revolutionary. She developed Armandism - a form of social nationalism - by borrowing elements from different political extremes and combining them into one heterogenous belief. Armand gained much renown between middle-lower class individuals during the unruly years of 1926-1928, participating in numerous strikes and boycotts. While not exactly Jacobin Armand does contain a certain distrust of those on top, hence her clique being the weakest of the triumvirate.\n\nPrior and during the Great War Armand served as an auxiliary nurse, seeing first hand the effects and brutalities of conflict unlike the other triumvirate members. Even when the war was over peace had not fallen upon France. The years following, especially those before 1929, were ravaged with social and political strife; something that worked greatly in favour for Armand. By the time the Front Populaire Français was established Inessa Armand was already a well known name amongst the French people. With her political rivals now dead, Armand can now fully realize her perfect France.\n\n§RGod bless our Jeanne, and our liberated France!§!"
+  PB_Inessa_Armand_DESC:0 "§YBorn:§! 8/5/1874\n\n§YInessa Armand§! can only be described as both revolutionary and counter-revolutionary. She developed Armandism - a form of social nationalism - by borrowing elements from different political extremes and combining them into one heterogenous belief. Armand gained much renown and support between middle-lower class individuals during the unruly years of 1926-1928, participating in numerous strikes and boycotts. While not exactly Jacobin Armand does contain a certain distrust of those on top, hence her clique being the weakest of the triumvirate.\n\nPrior and during the Great War Armand served as an auxiliary nurse, seeing first hand the effects and brutalities of conflict unlike the other triumvirate members. Even when the war was over peace had not fallen upon France. The years following, especially those before 1929, were ravaged with social and political strife; something that worked greatly in favour for Armand. By the time the Front Populaire Français was established Inessa Armand was already a well known name amongst the French people. With her political rivals now dead, Armand can now fully realize her perfect France.\n\n§RGod bless our Jeanne, and our liberated France!§!"
 
   PB_Joseph_Darmand_DESC:0 ""
 
@@ -932,6 +932,10 @@
   French_personality.3.a:0 "Wonderful"
   French_personality.3.b:0 "Can We Build Another One Of Those?"
 
+  French_postwar.1.t:0 "The SP Demand Hannover"
+  French_postwar.1.d:0 ""
+  French_postwar.1.a:0 "I'd Rather Avoid A Civil War"
+
   ##########################
   # IDEAS
   ##########################
@@ -1409,8 +1413,8 @@
   PB_FRA_Our_Eyes_On_Ireland:0 "Our Eyes On Ireland"
   PB_FRA_We_Come_As_Liberators:0 "We Come As Liberators"
   PB_FRA_Albion_Tamed:0 "Albion Tamed"
-  PB_FRA_A_State_For_The_SP:0 "A State For The SP"
-  PB_FRA_A_State_For_The_Military:0 "Divide And Conquer"
+  PB_FRA_A_State_For_The_SP:0 "Seize Hamburg"
+  PB_FRA_A_State_For_The_Military:0 "Migrate Rhenish Industries"
   PB_FRA_What_About_Austria:0 "What About Tyrol?"
   PB_FRA_Seize_Istria:0 "Seize Istria"
   PB_FRA_Into_Switzerland:0 "Into Switzerland"
@@ -1807,6 +1811,15 @@
   MGE_one_gun_two_men:0 "Every Two Man a Gun"
   MGE_keep_german_tactics:0 "German Republican Forces"
   MGE_adopt_french_tactics:0 "The Charlamagne Divisions"
+
+  ##########################
+  # PARTIES
+  ##########################
+
+  FRA_National_Workers_Salvation_Front_long:0 "National Salvation Front"
+  FRA_Salvation_Front:0 "NSF"
+  FRA_Action_Francaise_long:0 "Action Française"
+  FRA_Action_Francaise:0 "ACF"
 
   ##########################
   # COSMETIC TAGS
