Did some adding in of icons

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -310,7 +310,7 @@ PB_IST_weapons_future:0 "Weapons of the Future"
 PB_IST_weapons_future_desc:0 ""
 PB_IST_calling_the_sons:0 "Calling the Sons of Italia"
 PB_IST_calling_the_sons_desc:0 ""
-PB_IST_calling_the_soldiers:0 "Calling the Sons of Italia"
+PB_IST_calling_the_soldiers:0 "Calling the Soldiers of Italia"
 PB_IST_calling_the_soldiers_desc:0 ""
 PB_IST_calling_the_workers:0 "Calling the Workers of Italia"
 PB_IST_calling_the_workers_desc:0 ""
