Megacity early work

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -913,7 +913,7 @@
  STATE_911:0 "Rotterdam-Zeeland"
  STATE_918:0 "Borkou"
  STATE_919:0 "Wadi Fira"
- STATE_920:0 "El Eglab"
+ STATE_920:0 "North Carnegia"
  STATE_912:0 "STATE_912"
  STATE_913:0 "STATE_913"
  STATE_914:0 "STATE_914"
@@ -921,7 +921,7 @@
  STATE_916:0 "STATE_916"
  STATE_917:0 "STATE_917"
  STATE_921:0 "Orol"
- STATE_922:0 "El Djouf"
+ STATE_922:0 "South Carnegia"
  STATE_923:0 "Friaul"
  STATE_924:0 "Néma"
  STATE_925:0 "Bamako"
