--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -490,7 +490,7 @@
  VICTORY_POINTS_10966:0 "Nova Lisboa"
  VICTORY_POINTS_10929:0 "Salisbury"
  VICTORY_POINTS_191:0 "Elisabethstad"
- VICTORY_POINTS_5117:0 "Leopoldstad"
+ VICTORY_POINTS_5117:0 "Josephstad"
  VICTORY_POINTS_5139:0 "Libravilla"
  VICTORY_POINTS_8193:0 "Brazzavilla"
  VICTORY_POINTS_5210:0 "Mombasa"
@@ -711,3 +711,14 @@
  VICTORY_POINTS_13217:0 "Monaco"
  VICTORY_POINTS_13216:0 "Andorra-la-Vella"
  VICTORY_POINTS_4989:0 "Bathurst"
+ VICTORY_POINTS_5077:0 "Livingstone"
+ VICTORY_POINTS_13242:0 "New Alexandria"
+ VICTORY_POINTS_13241:0 "Outer Alexandria"
+ VICTORY_POINTS_13237:0 "Mellonville"
+ VICTORY_POINTS_13238:0 "Rhodes City"
+ VICTORY_POINTS_5136:0 "Leopoldville"
+ VICTORY_POINTS_4897:0 "Francisland"
+ VICTORY_POINTS_1127:0 "South Benghasi"
+ VICTORY_POINTS_11910:0 "Marsa"
+ VICTORY_POINTS_10127:0 "South Marsa"
+ VICTORY_POINTS_1071:0 "East Marsa"
