Updated Missing Localisation
-Added generic names
-Added blank/vanilla descriptions to techs without them (did about half)

--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -263,3 +263,58 @@
 
  infantry_weapons1933:0 "Interwar Weapons"
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
+
+ ###Wolfxe placeholders, don't forget to change these!
+ support_equipment:0 "Support Equipment"
+ support_equipment_desc:0 ""
+ support_equipment_1:0 "Support Equipment"
+ support_equipment_1_desc:0 ""
+ motorized_equipment_1:0 "Motorised Equipment"
+ motorized_equipment_1_desc:0 ""
+ mechanized_equipment_1:0 "Mechanised Equipment I"
+ mechanized_equipment_1_desc:0 ""
+ mechanized_equipment_2:0 "Mechanised Equipment II"
+ mechanized_equipment_2_desc:0 ""
+ mechanized_equipment_3:0 "Mechanised Equipment III"
+ mechanized_equipment_3_desc:0 ""
+ infantry_equipment:0 "Infantry Equipment"
+ infantry_equipment_desc:0 ""
+ infantry_equipment_0_desc:0 ""
+ infantry_equipment_1_desc:0 ""
+ infantry_equipment_2_desc:0 ""
+ infantry_equipment_3_desc:0 ""
+ artillery_equipment:0 "Artillery Equipment"
+ artillery_equipment_desc:0 ""
+ artillery_equipment_1:0 "Artillery Equipment 1933"
+ artillery_equipment_1_desc:0 ""
+ artillery_equipment_2:0 "Artillery Equipment 1939"
+ artillery_equipment_2_desc:0 ""
+ artillery_equipment_3:0 "Artillery Equipment 1942"
+ artillery_equipment_3_desc:0 ""
+ anti_air_equipment:0 "Anti Air Equipment"
+ anti_air_equipment_desc:0 ""
+ anti_air_equipment_1:0 "Anti Air Equipment 1934"
+ anti_air_equipment_1_desc:0 ""
+ anti_air_equipment_2:0 "Anti Air Equipment 1940"
+ anti_air_equipment_2_desc:0 ""
+ anti_air_equipment_3:0 "Anti Air Equipment 1943"
+ anti_air_equipment_3_desc:0 ""
+
+ gw_armored_car_equipment:0 "Interwar Armored Car"
+ gw_armored_car_equipment_desc:0 "Where previous armored cars were simple commercial models with thin steel plating, this model was designed from the ground up to carry armor and light armament."
+ armored_car_equipment_1:0 "Basic Armored Car"
+ armored_car_equipment_1_desc:0 "An improved internal layout and additional ammunition storage creates a more effective armored car."
+ armored_car_equipment_2:0 "Improved Armored Car"
+ armored_car_equipment_2_desc:0 "Changes on the battlefield require a much heavier armament and thicker armor to defeat enemy light units and survive to report back."
+ armored_car_at_equipment:0 "Anti-Tank Armored Car"
+ armored_car_at_equipment_desc:0 "Our light mechanized units will come into contact with enemy tank forces at some point. Developing a special anti-tank variant would give them a fighting chance."
+ amphibious_mechanized_equipment:0 "Amphibious Landing Vehicles"
+ amphibious_mechanized_equipment_short:0 "Amtracs"
+ amphibious_mechanized_equipment_desc:0 "Amphibious Tractors, or Amtracs, allow Marines to be landed on a beach under armored protection. However, this comes at the cost of poor fuel efficiency."
+ amphibious_mechanized_equipment_1:0 "Basic Amphibious Tractor"
+ amphibious_mechanized_equipment_1_short:0 "Basic Amtrac"
+ amphibious_mechanized_equipment_1_desc:0 "Amphibious Tractors, or Amtracs, allow Marines to be landed on a beach under armored protection. However, this comes at the cost of poor fuel efficiency."
+ amphibious_mechanized_equipment_2:0 "Improved Amphibious Tractor"
+ amphibious_mechanized_equipment_2_short:0 "Improved Amtrac"
+ amphibious_mechanized_equipment_2_desc:0 "These Amtracs feature several improvements over the base version, such as a rear loading ramp for easier unloading on the beach."
+ 
