--- a/localisation/PB_Technologies_l_english.yml
+++ b/localisation/PB_Technologies_l_english.yml
@@ -7,34 +7,56 @@
  infantry_equipment_1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
 
  infantry_rations:0 "Infantry Rations"
+ infantry_rations_desc:0 ""
  infantry_rations3:0 "Improved Meal Supplments"
+ infantry_rations3_desc:0 ""
  infantry_rations4:0 "Enhanced Water Tablets"
+ infantry_rations4_desc:0 ""
  rations_equipment_1:0 "Rations"
+ rations_equipment_1_desc:0 ""
  rations_equipment_2:0 "MREs"
+ rations_equipment_2_desc:0 ""
  rations_equipment_3:0 "Military Survival Kits"
+ rations_equipment_3_desc:0 ""
  infantry_drugs:0 "Basic Stimulant Manufacturing"
  infantry_drugs_desc:0 "Utilizing a combination of various medical science developments, chemistry and electronics, our technical teams can begin creating a whole galaxy of multi-colored uppers, downers, screamers, laughers and mindbreaking psychedelics for combat and civilian use. All under the table and very legal, of course."
  infantry_drugs_pep_pills:0 "Pep Pills"
+ infantry_drugs_pep_pills_desc:0 ""
  infantry_drugs_thalasin:0 "Thalasin"
+ infantry_drugs_thalasin_desc:0 ""
  infantry_drugs_melange:0 "Melange"
+ infantry_drugs_melange_desc:0 ""
  infantry_drugs_victory_tonic:0 "Victory Tonic"
+ infantry_drugs_victory_tonic_desc:0 ""
 
  infantry_drugs_2:0 "Industrial Grade Stimulant Manufacturing"
+ infantry_drugs_2_desc:0 ""
  infantry_drugs_soma:0 "Soma"
+ infantry_drugs_soma_desc:0 ""
  infantry_drugs_obetrol:0 "Obetrol"
+ infantry_drugs_obetrol_desc:0 ""
  infantry_drugs_milk_plus:0 "Milk Plus"
+ infantry_drugs_milk_plus_desc:0 ""
  
  infantry_drugs_substance_f:0 "Substance F"
+ infantry_drugs_substance_f_desc:0 ""
 
  infantry_drugs_3:0 "Enhanced Industrial Stimulant Manufacturing"
+ infantry_drugs_3_desc:0 ""
  infantry_strength_booster:0 "Musculo-Skeletal Gene Treatment"
+ infantry_strength_booster_desc:0 ""
  infantry_intelligence_booster:0 "Ocular Injected Hypothalamus Therapy"
+ infantry_intelligence_booster_desc:0 ""
 
  infantry_standard_rounds:0 "Standard Munitions"
  infantry_flechette_rounds:0 "Flechette Munitions"
+ infantry_equipment_0_desc:0 ""
  infantry_armor_piercing_rounds:0 "Armor Piercing Munitions"
+ infantry_armor_piercing_rounds_desc:0 ""
  infantry_incendiary_rounds:0 "Incendiary Munitions"
+ infantry_incendiary_rounds_desc:0 ""
  infantry_explosive_rounds:0 "Explosive Munitions"
+ infantry_explosive_rounds_desc:0 ""
 
  tech_flamethrower:0 "Flamethrowers"
  tech_flamethrower_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
