pushing the bratwurst

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -129,6 +129,9 @@
   PB_GER_Europa_Spies:0 "Europa Abteilung"
   Hamburg_Membership:0 "Hamburg Membership"
   Hamburg_Membership_1:0 "Hamburg Membership"
+  Hamburg_Membership_2:0 "Hamburg Membership"
+  Hamburg_Membership_3:0 "Hamburg Membership"
+  Hamburg_Membership_4:0 "Hamburg Membership"
 
   PB_GER_Relief_Packages:0 "Relief Packages"
   PB_GER_Construction_Forts:0 "Festung Germanien"
@@ -438,10 +441,10 @@
   PB_GER_Europe_Alliance_Network:0 "An European Bulwark against Extremism"
   PB_GER_Europe_Military_Aid:0 "Helping our Allies"
   PB_GER_Europe_Vienna_Research_Collab:0 "The Vienna Research Collaboration"
-  PB_GER_Europe_Strength_Wallonia:0 "Strenghten Wallonia"
+  PB_GER_Europe_Strength_Wallonia:0 "Protecting the Benelux"
   PB_GER_Europe_Solidarity:0 "A Sense of Solidarity"
   PB_GER_Europe_Future_Union:0 "The Beginning of an Union"
-  PB_GER_Europe_Economic_Aid:0 "Rebuilding Europe"
+  PB_GER_Europe_Economic_Aid:0 "Worker Exchange Programms"
   PB_GER_Approaching_Balkans:0 "Approaching the Balkans"
   PB_GER_Approaching_Northern_Europe:0 "Approaching the Scandinavia"
 
@@ -919,6 +922,9 @@
   PB_GER_Helping_Polish_Military:0 "Help Rebuilding the [POL.GetFlag]Polish Military"
   PB_GER_Helping_Polish_Industry:0 "Assist in the building of the [POL.GetFlag]Polish Industry"
   PB_GER_Polish_German_Alliance:0 "Solidifying the [POL.GetFlag]Polish-[GER.GetFlag]German Alliance"
+
+  PB_GER_Invite_Netherlands_to_Hamburg:0 "Invite the [HOL.GetFlag]Netherlands to join the League"
+  PB_GER_Invite_Netherlands_to_Hamburg_desc:0 "The Netherlands are vital in protecting our flank against the French. We have to make sure that they will join our alliance before a potential with France can begin. We can help them fortify their border and the Rhine and modernize their army."
   
 
   ##########################
@@ -1239,3 +1245,6 @@ DAS_prussian_admiral_desc:0 "The Prussian Admiral"
 
 ####
 HAMBURG_LEAGUE:0 "Hamburg League"
+
+HamburgLeag_research_name:0 "Vienna Research Collaboration"
+HamburgLeag_research_desc:0 "The Vienna Research Collaboration was founded in Nürnberg Germany with the intent to share technological discoveries and continue to advance them together for the good of humanity."
